# Azure-TGBot

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
data/: config.env.example  system.txt
migrations/: env.py
migrations/versions/: 23246dd846d2_add_chat_id_to_conversation.py  d22cf9e89625_initial_database.py
src/bot/: __init__.py  __main__.py  config.py
src/bot/database/: __init__.py  connection.py  models.py  operations.py
src/bot/filters/: __init__.py  sudo.py  whitelist.py
src/bot/handlers/: ask.py  models.py  reset.py  search.py  upgrade.py  whiteslist.py
src/bot/middlewares/: __init__.py  queue.py  rate_limit.py
src/bot/utils/: text_splitter.py  user_info.py
src/bot/utils/chat/: client.py  context.py  history.py  models.py  processor.py  response_processor.py  system_message.py  text_utils.py
src/bot/utils/chat/client/: __init__.py  client.py  message_processor.py  rate_limiter.py  retry_policy.py  tool_handler.py  utils.py
src/bot/utils/chat/tools/: __init__.py  base_tool.py  bing_search.py  github_data.py  open_web_results.py  schema.py  tool_manager.py
