[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bot"
version = "1.0.0"
description = "A conversational Telegram chatbot using GitHub AI models."
authors = [{ name = "Hitalo" }]
dependencies = [
    "aiogram[I18n,fast]>=3.20.0",
    "aiohttp[speedups]>=3.11.16",
    "azure-ai-inference>=1.0.0b9",
    "tiktoken>=0.9.0",
    "pydantic-settings>=2.9.0",
    "orjson>=3.10.16",
    "chatgpt-md-converter>=0.3.4",
    "lxml>=5.3.2",
    "sqlalchemy[aiosqlite,mypy]>=2.0.40",
    "alembic>=1.15.2",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"

[tool.uv]
managed = true
dev-dependencies = ["pre-commit>=4.2.0", "ruff>=0.11.7"]
